--- a/Notebooks/Totalsegmentator/downloadDicomAndConvertNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/downloadDicomAndConvertNotebook.ipynb
@@ -38,44 +38,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "hT_MQVJ_NbZU"
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
-        "#Installing dcm2niix and pigz\n",
-        "!apt-get install dcm2niix pigz lz4"
+        "# %%capture\n",
+        "# #Installing dcm2niix and pigz\n",
+        "# !apt-get install dcm2niix pigz lz4"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "id": "N2Z3udYNn7ur"
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
-        "#Installing plastimatch\n",
-        "!apt-get install plastimatch "
+        "# %%capture\n",
+        "# #Installing plastimatch\n",
+        "# !apt-get install plastimatch "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "cMi94BlAQrb5"
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
-        "#install s5cmd\n",
-        "!wget \"https://github.com/peak/s5cmd/releases/download/v2.0.0/s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
-        "!tar -xvzf \"s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
-        "!rm \"s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
-        "!mv s5cmd /usr/local/bin/s5cmd"
+        "# %%capture\n",
+        "# #install s5cmd\n",
+        "# !wget \"https://github.com/peak/s5cmd/releases/download/v2.0.0/s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
+        "# !tar -xvzf \"s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
+        "# !rm \"s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
+        "# !mv s5cmd /usr/local/bin/s5cmd"
       ]
     },
     {
@@ -90,12 +90,13 @@
     {
       "cell_type": "code",
       "source": [
-        "converterType='dcm2niix'"
+        "converter='dcm2niix'\n",
+        "csvFilePath=''"
       ],
       "metadata": {
         "id": "gy6QqWR-jjdP"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "mWLvDAwIQcg1"
       },
@@ -139,7 +140,7 @@
         "id": "0pyWQJ86m7JC",
         "outputId": "89a06800-6304-411e-8375-a5dbc977a54c"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "LZMjMRsyQyCH",
         "colab": {
@@ -186,8 +187,9 @@
         "#zip_file_path='/content/drive/MyDrive/result.zip'\n",
         "#!unzip $zip_file_path\n",
         "\n",
-        "csv_file_path = glob.glob('*.csv')[0]\n",
+        "#csv_file_path = glob.glob('*.csv')[0]\n",
         "#csv_file_path= '/home/vamsi/Downloads/result.csv'\n",
+        "csv_file_path=csv_file_path.replace(\"gs://\", \"/cromwell_root/\")\n",
         "\n",
         "start_time = time.time()\n",
         "cohort_df=pd.read_csv(csv_file_path, delimiter=',', encoding='utf-8')\n",
@@ -199,7 +201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "id": "jDxZvqDlR5Cc"
       },
@@ -244,12 +246,12 @@
       "metadata": {
         "id": "lx_U7rRjtRYk"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "QFG0KcZ_QPyG"
       },
@@ -315,7 +317,7 @@
       "metadata": {
         "id": "s0SPIZ5RTxDb"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -355,7 +357,7 @@
       "metadata": {
         "id": "fGX6gofuPhjf"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -383,7 +385,7 @@
       "metadata": {
         "id": "oKATbtgwPjX9"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -443,7 +445,7 @@
         "id": "ZTtOJ7CtQYkX",
         "outputId": "b4688bda-7eb3-4c73-cbdb-0208d099c2c7"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -860,7 +862,7 @@
       "metadata": {
         "id": "tba4tK6pvja9"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -872,7 +874,7 @@
       "metadata": {
         "id": "wP7_k4msvl2E"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -913,7 +915,7 @@
         "id": "-q3J_d00v0gz",
         "outputId": "1abfdac6-cb92-4602-858e-c1e011ad4514"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -977,7 +979,7 @@
         "id": "z9n17x4vhDQp",
         "outputId": "87510aba-d893-4e20-d3e1-96533a8da513"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1276,7 +1278,7 @@
       "metadata": {
         "id": "nWV5c_DYVj47"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1287,7 +1289,7 @@
       "metadata": {
         "id": "G8RuAFEJi-nW"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     }
   ],
@@ -1295,7 +1297,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1p-ZpkJeUN2lU-RppKUbNX0V_APgHME38",
-      "authorship_tag": "ABX9TyPRutEgSpdTrMpT7ZmqtJ0u",
+      "authorship_tag": "ABX9TyOAhLGqRDpimnEo9/a9N5b9",
       "include_colab_link": true
     },
     "kernelspec": {
