--- a/Notebooks/Totalsegmentator/downloadDicomAndConvertNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/downloadDicomAndConvertNotebook.ipynb
@@ -189,10 +189,10 @@
         "\n",
         "#csv_file_path = glob.glob('*.csv')[0]\n",
         "#csv_file_path= '/home/vamsi/Downloads/result.csv'\n",
-        "csv_file_path=csv_file_path.replace(\"gs://\", \"/cromwell_root/\")\n",
+        "csvFilePath=csvFilePath.replace(\"gs://\", \"/cromwell_root/\")\n",
         "\n",
         "start_time = time.time()\n",
-        "cohort_df=pd.read_csv(csv_file_path, delimiter=',', encoding='utf-8')\n",
+        "cohort_df=pd.read_csv(csvFilePath, delimiter=',', encoding='utf-8')\n",
         "#cohort_df= pd.read_csv('/content/drive/MyDrive/bquxjob_7f0d87d5_187056e0dd3.csv') #two nifti files example\n",
         "#cohort_df= pd.read_csv('/content/drive/MyDrive/bq-results-20230315-160529-1678896367937/bq-results-20230315-160529-1678896367937.csv')\n",
         "read_time=time.time() -start_time\n",
@@ -1297,7 +1297,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1p-ZpkJeUN2lU-RppKUbNX0V_APgHME38",
-      "authorship_tag": "ABX9TyOAhLGqRDpimnEo9/a9N5b9",
+      "authorship_tag": "ABX9TyMjk1CRWv6BIcgW22y9MpOE",
       "include_colab_link": true
     },
     "kernelspec": {
