--- a/Notebooks/Totalsegmentator/downloadDicomAndConvertNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/downloadDicomAndConvertNotebook.ipynb
@@ -189,7 +189,7 @@
         "\n",
         "#csv_file_path = glob.glob('*.csv')[0]\n",
         "#csv_file_path= '/home/vamsi/Downloads/result.csv'\n",
-        "csvFilePath=csvFilePath.replace(\"gs://\", \"/cromwell_root/\")\n",
+        "#csvFilePath=csvFilePath.replace(\"gs://\", \"/cromwell_root/\")\n",
         "\n",
         "start_time = time.time()\n",
         "cohort_df=pd.read_csv(csvFilePath, delimiter=',', encoding='utf-8')\n",
@@ -1297,7 +1297,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1p-ZpkJeUN2lU-RppKUbNX0V_APgHME38",
-      "authorship_tag": "ABX9TyMjk1CRWv6BIcgW22y9MpOE",
+      "authorship_tag": "ABX9TyPLxd+jcm06PdGE7e7csvqn",
       "include_colab_link": true
     },
     "kernelspec": {
