--- a/Notebooks/Totalsegmentator/downloadDicomAndConvertNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/downloadDicomAndConvertNotebook.ipynb
@@ -90,7 +90,7 @@
     {
       "cell_type": "code",
       "source": [
-        "converter='dcm2niix'\n",
+        "converterType='dcm2niix'\n",
         "csvFilePath=''"
       ],
       "metadata": {
@@ -1297,7 +1297,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1p-ZpkJeUN2lU-RppKUbNX0V_APgHME38",
-      "authorship_tag": "ABX9TyPLxd+jcm06PdGE7e7csvqn",
+      "authorship_tag": "ABX9TyMO/NKzjsJPx3c800VypdSi",
       "include_colab_link": true
     },
     "kernelspec": {
