--- a/Notebooks/Totalsegmentator/itkimage2segimageNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/itkimage2segimageNotebook.ipynb
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -75,54 +75,74 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "id": "aOhW6CUz1qIm"
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
-        "#Installing lz4 for compression/decompression\n",
-        "#xvfb required for previewing Totalsegmentator png images\n",
-        "!apt-get install lz4 "
+        "# %%capture\n",
+        "# #Installing lz4 for compression/decompression\n",
+        "# #xvfb required for previewing Totalsegmentator png images\n",
+        "# !apt-get install lz4 "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "id": "YxH7dpgiDsUN"
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
-        "dcmqi_release_url = \"https://github.com/QIICR/dcmqi/releases/download/v1.2.5/dcmqi-1.2.5-linux.tar.gz\"\n",
-        "dcmqi_download_path = f\"{curr_dir}/dcmqi-1.2.5-linux.tar.gz\"\n",
-        "dcmqi_path = f\"{curr_dir}/dcmqi-1.2.5-linux\"\n",
+        "# %%capture\n",
+        "# dcmqi_release_url = \"https://github.com/QIICR/dcmqi/releases/download/v1.2.5/dcmqi-1.2.5-linux.tar.gz\"\n",
+        "# dcmqi_download_path = f\"{curr_dir}/dcmqi-1.2.5-linux.tar.gz\"\n",
+        "# dcmqi_path = f\"{curr_dir}/dcmqi-1.2.5-linux\"\n",
         "\n",
-        "!wget -O $dcmqi_download_path $dcmqi_release_url\n",
+        "# !wget -O $dcmqi_download_path $dcmqi_release_url\n",
         "\n",
-        "!tar -xvf $dcmqi_download_path \n",
+        "# !tar -xvf $dcmqi_download_path \n",
         "\n",
-        "!mv $dcmqi_path/bin/* /bin\n",
-        "!rm -r $dcmqi_download_path $dcmqi_path"
+        "# !mv $dcmqi_path/bin/* /bin\n",
+        "# !rm -r $dcmqi_download_path $dcmqi_path"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "id": "PRDMnjsF5_JS"
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
-        "#install s5cmd\n",
-        "!wget \"https://github.com/peak/s5cmd/releases/download/v2.0.0/s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
-        "!tar -xvzf \"s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
-        "!rm \"s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
-        "!mv s5cmd /usr/local/bin/s5cmd"
+        "# %%capture\n",
+        "# #install s5cmd\n",
+        "# !wget \"https://github.com/peak/s5cmd/releases/download/v2.0.0/s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
+        "# !tar -xvzf \"s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
+        "# !rm \"s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
+        "# !mv s5cmd /usr/local/bin/s5cmd"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Parameters"
+      ],
+      "metadata": {
+        "id": "masmaHkeC1Al"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "csvFilePath=''"
+      ],
+      "metadata": {
+        "id": "3RFWd8GDC4g9"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -135,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -202,8 +222,9 @@
         "  pass\n",
         "\n",
         "#Get the file path of the inferenceNiftiFiles\n",
-        "#lz4_file_path = glob.glob('inferenceNiftiFiles.tar.lz4')[0]\n",
-        "lz4_file_path = '/content/drive/MyDrive/idc_vamsi/inferenceNiftiFiles.tar.lz4'\n",
+        "lz4_file_path = glob.glob('inferenceNiftiFiles.tar.lz4')[0]\n",
+        "#lz4_file_path = '/content/drive/MyDrive/idc_vamsi/inferenceNiftiFiles.tar.lz4'\n",
+        "\n",
         "!lz4 -d {lz4_file_path} -c | tar xvf -\n",
         "\n",
         "#!lz4 -d /content/drive/MyDrive/idc_vamsi/inferenceNiftiFiles.tar.lz4 -c | tar xvf -"
@@ -220,7 +241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "id": "Cifs77RCMlEF"
       },
@@ -234,7 +255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -271,7 +292,8 @@
         "start_time = time.time()\n",
         "#cohort_df=pd.read_csv(csv_file_path, delimiter=',', encoding='utf-8')\n",
         "#cohort_df= pd.read_csv('/content/drive/MyDrive/bquxjob_7f0d87d5_187056e0dd3.csv') #two nifti files example\n",
-        "cohort_df= pd.read_csv('/content/drive/MyDrive/bq-results-20230315-160529-1678896367937/bq-results-20230315-160529-1678896367937.csv')\n",
+        "#cohort_df= pd.read_csv('/content/drive/MyDrive/bq-results-20230315-160529-1678896367937/bq-results-20230315-160529-1678896367937.csv')\n",
+        "cohort_df=pd.read_csv(csvFilePath, delimiter=',', encoding='utf-8')\n",
         "read_time=time.time() -start_time\n",
         "print('read in '+str(read_time)+ '  seconds')  "
       ]
@@ -287,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "metadata": {
         "id": "ByNK-uLo5tfh"
       },
@@ -302,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
         "id": "_rMtxR77N_RH"
       },
@@ -346,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "id": "o0ufgeVFnlCm"
       },
@@ -382,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -419,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
         "id": "xwRE4F8AmscK"
       },
@@ -486,7 +508,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -809,7 +831,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -850,7 +872,7 @@
       "source": [
         "start_time = time.time()\n",
         "try:\n",
-        "  os.remove('/content/itkimage2segimageDICOMsegFiles.tar.lz4')\n",
+        "  os.remove(f'{curr_dir}/itkimage2segimageDICOMsegFiles.tar.lz4')\n",
         "except OSError:\n",
         "  pass\n",
         "!tar cvf - {curr_dir}/itkimage2segimage | lz4 > /content/itkimage2segimageDICOMsegFiles.tar.lz4\n",
@@ -868,7 +890,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1181,7 +1203,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "120lKnRwJif8JCdcmUpXo3GpyD11NkvRT",
-      "authorship_tag": "ABX9TyMi8BJPYq1aZBzxPE167gbG",
+      "authorship_tag": "ABX9TyPV70lKSjsKfPMWEHM4TYgT",
       "include_colab_link": true
     },
     "kernelspec": {
