--- a/Notebooks/Totalsegmentator/inferenceTotalSegmentatorNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/inferenceTotalSegmentatorNotebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1q2f4tmpAjfNgXPC3uv-FslqfmvFvDXPV",
-      "authorship_tag": "ABX9TyONEgYQousnTIOj94d2MPeT",
+      "authorship_tag": "ABX9TyMwWH9vLUvzCDtl5FheJ0fF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,10 +66,10 @@
     {
       "cell_type": "code",
       "source": [
-        "%%capture\n",
-        "#Installing lz4 for compression/decompression\n",
-        "#xvfb required for previewing Totalsegmentator png images\n",
-        "!apt-get install lz4 xvfb"
+        "# %%capture\n",
+        "# #Installing lz4 for compression/decompression\n",
+        "# #xvfb required for previewing Totalsegmentator png images\n",
+        "# !apt-get install lz4 xvfb"
       ],
       "metadata": {
         "id": "p0BAKG7AOI9a"
@@ -80,11 +80,11 @@
     {
       "cell_type": "code",
       "source": [
-        "%%capture\n",
-        "#Installing Totalsegmentator for Inference\n",
-        "#pyradiomics required for extracting radiomics features \n",
-        "#nvidia-ml-py3 for capturing gpu utilization\n",
-        "!pip install TotalSegmentator pyradiomics nvidia-ml-py3"
+        "# %%capture\n",
+        "# #Installing Totalsegmentator for Inference\n",
+        "# #pyradiomics required for extracting radiomics features \n",
+        "# #nvidia-ml-py3 for capturing gpu utilization\n",
+        "# !pip install TotalSegmentator pyradiomics nvidia-ml-py3"
       ],
       "metadata": {
         "id": "R68Zs8VTrvKg"
@@ -135,8 +135,8 @@
         "import glob\n",
         "\n",
         "#Get the file path of the \n",
-        "#lz4_file_path = glob.glob('downloadDicomAndConvertNiftiFiles.tar.lz4')[0]\n",
-        "lz4_file_path = '/content/drive/MyDrive/idc_vamsi/downloadDicomAndConvertNiftiFiles.tar.lz4'\n",
+        "lz4_file_path = glob.glob('downloadDicomAndConvertNiftiFiles.tar.lz4')[0]\n",
+        "#lz4_file_path = '/content/drive/MyDrive/idc_vamsi/downloadDicomAndConvertNiftiFiles.tar.lz4'\n",
         "\n",
         "!lz4 -d {lz4_file_path} -c | tar xvf -\n",
         "\n",
