--- a/Notebooks/Totalsegmentator/inferenceTotalSegmentatorNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/inferenceTotalSegmentatorNotebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1q2f4tmpAjfNgXPC3uv-FslqfmvFvDXPV",
-      "authorship_tag": "ABX9TyMwWH9vLUvzCDtl5FheJ0fF",
+      "authorship_tag": "ABX9TyMbmxTxITBo/KaJM4aBWhYE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,6 +93,36 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Parameters for papermill"
+      ],
+      "metadata": {
+        "id": "8l5mWkLoRGVX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "converterType='dcm2niix'\n",
+        "niftiFilePath=''"
+      ],
+      "metadata": {
+        "id": "JJ-g6Lw2RDUp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Decompressing NIFTI files from first step"
+      ],
+      "metadata": {
+        "id": "RrD7DBKTJIHT"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -135,33 +165,14 @@
         "import glob\n",
         "\n",
         "#Get the file path of the \n",
-        "lz4_file_path = glob.glob('downloadDicomAndConvertNiftiFiles.tar.lz4')[0]\n",
+        "\n",
         "#lz4_file_path = '/content/drive/MyDrive/idc_vamsi/downloadDicomAndConvertNiftiFiles.tar.lz4'\n",
         "\n",
-        "!lz4 -d {lz4_file_path} -c | tar xvf -\n",
+        "\n",
+        "!lz4 -d {niftiFilePath} -c | tar xvf -\n",
         "\n",
         "#!lz4 -d /content/drive/MyDrive/idc_vamsi/downloadDicomAndConvertNiftiFiles.tar.lz4 -c | tar xvf -"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "###Parameters for papermill"
-      ],
-      "metadata": {
-        "id": "8l5mWkLoRGVX"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "converterType='dcm2niix'"
-      ],
-      "metadata": {
-        "id": "JJ-g6Lw2RDUp"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -300,7 +311,7 @@
         "      print(\"Processing series: \"+series_id)  \n",
         "\n",
         "      log = pd.DataFrame({'SeriesInstanceUID': [series_id]}) \n",
-        "      series_id_folder_path= os.path.join(curr_dir, 'dcm2niix', series_id)\n",
+        "      series_id_folder_path= os.path.join(curr_dir, converterType, series_id)\n",
         "      # Get the list of files in series_id_path\n",
         "      nifti_files = os.listdir(series_id_folder_path)\n",
         "      # Get the first (and only) file in the list\n",
@@ -321,7 +332,7 @@
         "      log['archiving_time'] = archiving_time\n",
         "\n",
         "      !rm -r {curr_dir}/Inference/{series_id}/{series_id}.nii \n",
-        "      !rm -r {curr_dir}/dcm2niix/{series_id}\n",
+        "      !rm -r {curr_dir}/converterType/{series_id}\n",
         "      global runtime_stats\n",
         "      runtime_stats = pd.concat([runtime_stats, log], ignore_index=True, axis=0)"
       ],
@@ -348,7 +359,7 @@
         "                                      'gpu_usage_mb', 'gpu_total_mb', 'gpu_type', 'disk_usage_all', 'disk_total'\n",
         "                                      ])\n",
         "if __name__ == \"__main__\":\n",
-        "    for series_id in os.listdir(f'{curr_dir}/dcm2niix'):\n",
+        "    for series_id in os.listdir(f'{curr_dir}/{converterType}'):\n",
         "        with ThreadPoolExecutor() as executor:\n",
         "            monitor = MemoryMonitor()\n",
         "            mem_thread = executor.submit(monitor.measure_usage)\n",
