--- a/Notebooks/Totalsegmentator/itkimage2segimageNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/itkimage2segimageNotebook.ipynb
@@ -136,7 +136,8 @@
     {
       "cell_type": "code",
       "source": [
-        "csvFilePath=''"
+        "csvFilePath=''\n",
+        "inferenceNiftiFilePath=''"
       ],
       "metadata": {
         "id": "3RFWd8GDC4g9"
@@ -222,10 +223,10 @@
         "  pass\n",
         "\n",
         "#Get the file path of the inferenceNiftiFiles\n",
-        "lz4_file_path = glob.glob('inferenceNiftiFiles.tar.lz4')[0]\n",
+        "\n",
         "#lz4_file_path = '/content/drive/MyDrive/idc_vamsi/inferenceNiftiFiles.tar.lz4'\n",
         "\n",
-        "!lz4 -d {lz4_file_path} -c | tar xvf -\n",
+        "!lz4 -d {inferenceNiftiFilePath} -c | tar xvf -\n",
         "\n",
         "#!lz4 -d /content/drive/MyDrive/idc_vamsi/inferenceNiftiFiles.tar.lz4 -c | tar xvf -"
       ]
@@ -1203,7 +1204,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "120lKnRwJif8JCdcmUpXo3GpyD11NkvRT",
-      "authorship_tag": "ABX9TyPV70lKSjsKfPMWEHM4TYgT",
+      "authorship_tag": "ABX9TyMrwtB+TtHLF5s1gTgu93zj",
       "include_colab_link": true
     },
     "kernelspec": {
