--- a/Notebooks/Totalsegmentator/inferenceTotalSegmentatorNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/inferenceTotalSegmentatorNotebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1q2f4tmpAjfNgXPC3uv-FslqfmvFvDXPV",
-      "authorship_tag": "ABX9TyMbmxTxITBo/KaJM4aBWhYE",
+      "authorship_tag": "ABX9TyNrJxNgOu4znOjXQK5+nHi4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -169,7 +169,7 @@
         "#lz4_file_path = '/content/drive/MyDrive/idc_vamsi/downloadDicomAndConvertNiftiFiles.tar.lz4'\n",
         "\n",
         "\n",
-        "!lz4 -d {niftiFilePath} -c | tar xvf -\n",
+        "!lz4 -d {niftiFilePath} -c | tar  --strip-components=1  -xvf -\n",
         "\n",
         "#!lz4 -d /content/drive/MyDrive/idc_vamsi/downloadDicomAndConvertNiftiFiles.tar.lz4 -c | tar xvf -"
       ]
@@ -332,7 +332,7 @@
         "      log['archiving_time'] = archiving_time\n",
         "\n",
         "      !rm -r {curr_dir}/Inference/{series_id}/{series_id}.nii \n",
-        "      !rm -r {curr_dir}/converterType/{series_id}\n",
+        "      !rm -r {curr_dir}/{converterType}/{series_id}\n",
         "      global runtime_stats\n",
         "      runtime_stats = pd.concat([runtime_stats, log], ignore_index=True, axis=0)"
       ],
