--- a/Notebooks/Totalsegmentator/itkimage2segimageNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/itkimage2segimageNotebook.ipynb
@@ -226,7 +226,7 @@
         "\n",
         "#lz4_file_path = '/content/drive/MyDrive/idc_vamsi/inferenceNiftiFiles.tar.lz4'\n",
         "\n",
-        "!lz4 -d {inferenceNiftiFilePath} -c | tar xvf -\n",
+        "!lz4 -d {inferenceNiftiFilePath} -c | tar --strip-components=1 -xvf -\n",
         "\n",
         "#!lz4 -d /content/drive/MyDrive/idc_vamsi/inferenceNiftiFiles.tar.lz4 -c | tar xvf -"
       ]
@@ -1204,7 +1204,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "120lKnRwJif8JCdcmUpXo3GpyD11NkvRT",
-      "authorship_tag": "ABX9TyMrwtB+TtHLF5s1gTgu93zj",
+      "authorship_tag": "ABX9TyO9EGqr46z3Z2vudLcGg+04",
       "include_colab_link": true
     },
     "kernelspec": {
