--- a/Notebooks/Totalsegmentator/inferenceTotalSegmentatorNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/inferenceTotalSegmentatorNotebook.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     "gpuClass": "standard"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/vkt1414/Cloud-Resources-Workflows/blob/main/Notebooks/Totalsegmentator/inferenceTotalSegmentatorNotebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -61,7 +72,7 @@
       "metadata": {
         "id": "p0BAKG7AOI9a"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +87,7 @@
       "metadata": {
         "id": "R68Zs8VTrvKg"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +108,7 @@
       "metadata": {
         "id": "JJ-g6Lw2RDUp"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -111,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "y_so3BoXMa10",
         "colab": {
@@ -182,7 +193,7 @@
       "metadata": {
         "id": "cr0tv-sbn5ZP"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -198,7 +209,7 @@
       "metadata": {
         "id": "sqeESHc7ntX8"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -217,7 +228,7 @@
         },
         "outputId": "329396ea-dbb8-446d-ee4d-d4c42ed5504f"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,7 +293,7 @@
       "metadata": {
         "id": "cGQ_URr1pQpj"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -326,7 +337,7 @@
       "metadata": {
         "id": "10_jVVTElNZ5"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -409,7 +420,7 @@
         "id": "rZfAhcQopl59",
         "outputId": "95fc485c-835a-46cd-d884-d4ca55da2a0d"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -793,7 +804,7 @@
         "id": "bxuuD6yqdmzF",
         "outputId": "dc9f2a6d-67d9-490b-d2f9-1af56a668607"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -873,7 +884,7 @@
         "id": "Lc7Hep0lkJWd",
         "outputId": "fb66e831-d76a-4273-965e-c524751a0744"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
