--- a/Notebooks/Totalsegmentator/itkimage2segimageNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/itkimage2segimageNotebook.ipynb
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "aOhW6CUz1qIm"
       },
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "YxH7dpgiDsUN"
       },
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "PRDMnjsF5_JS"
       },
@@ -142,7 +142,7 @@
       "metadata": {
         "id": "3RFWd8GDC4g9"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -236,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "Cifs77RCMlEF"
       },
@@ -250,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -304,7 +304,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "ByNK-uLo5tfh"
       },
@@ -319,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "_rMtxR77N_RH"
       },
@@ -363,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "o0ufgeVFnlCm"
       },
@@ -399,7 +399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -436,7 +436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "xwRE4F8AmscK"
       },
@@ -459,8 +459,8 @@
         "\n",
         "\n",
         "      #Get Inference NIFTI file path\n",
-        "      inference_nifti_filename_path = os.path.join(curr_dir,'Inference', series_id, series_id+'.nii.gz.lz4')\n",
-        "      inference_nifti_filename = os.path.join(curr_dir,'Inference', series_id, series_id+'.nii.gz')\n",
+        "      inference_nifti_filename_path = os.path.join(curr_dir,'Inference', series_id, series_id+'.nii.lz4')\n",
+        "      inference_nifti_filename = os.path.join(curr_dir,'Inference', series_id, series_id+'.nii')\n",
         "      inference_list = []\n",
         "      inference_list.append(inference_nifti_filename)\n",
         "\n",
@@ -503,7 +503,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -810,7 +810,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -867,7 +867,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1202,8 +1202,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "mount_file_id": "https://github.com/vkt1414/Cloud-Resources-Workflows/blob/main/Notebooks/Totalsegmentator/itkimage2segimageNotebook.ipynb",
-      "authorship_tag": "ABX9TyMcNgtTyJvo9ehW2k1oZUYN",
       "include_colab_link": true
     },
     "kernelspec": {
