--- a/Notebooks/Totalsegmentator/slicerMappingsTotalSegmentator.ipynb
+++ b/Notebooks/Totalsegmentator/slicerMappingsTotalSegmentator.ipynb
@@ -28,7 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Importing Packages**"
+        "###**Importing Packages**"
       ],
       "metadata": {
         "id": "ubqTDx3-3I0x"
@@ -55,7 +55,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###**Runtime Environment**###"
+        "###**Runtime Environment**"
       ],
       "metadata": {
         "id": "jJ3mWjCy3Qkq"
@@ -96,7 +96,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###**Download TotalSegmentator mappings from Slicer Documentation**###"
+        "###**Download TotalSegmentator mappings from Slicer Documentation**"
       ],
       "metadata": {
         "id": "UySVqxW74FL3"
@@ -142,7 +142,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###**Data Wrangling**###"
+        "###**Data Wrangling**"
       ],
       "metadata": {
         "id": "9csIzy2W4psO"
@@ -618,7 +618,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###**MhubAI's dcmqi json config as a template**###"
+        "###**MhubAI's dcmqi json config as a template**"
       ],
       "metadata": {
         "id": "tpfV0-cU4_29"
@@ -908,7 +908,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###**Generating Updated dcmqi json config using Slicer Mappings**###"
+        "###**Generating Updated dcmqi json config using Slicer Mappings**"
       ],
       "metadata": {
         "id": "BZxAsEAh5bfY"
@@ -2934,7 +2934,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###**Verifying Slicer Mappings against Snomed CT mappings**###"
+        "###**Verifying Slicer Mappings against Snomed CT mappings**"
       ],
       "metadata": {
         "id": "D9wQMs1Y5sAA"
