--- a/Notebooks/Totalsegmentator/downloadDicomAndConvertAndInferenceTotalSegmentatorNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/downloadDicomAndConvertAndInferenceTotalSegmentatorNotebook.ipynb
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "p0BAKG7AOI9a"
       },
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "R68Zs8VTrvKg"
       },
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "V_Ms6GwHHOr2"
       },
@@ -99,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "id": "16RKHQCnIM2V"
       },
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -165,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "id": "JJ-g6Lw2RDUp",
         "tags": [
@@ -200,7 +200,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -271,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "UPjtDJS4JIdg"
       },
@@ -295,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "zpuo1QtbJjvW"
       },
@@ -318,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "sqeESHc7ntX8"
       },
@@ -337,7 +337,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "id": "-1nH_ABkKoP2"
       },
@@ -370,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "u2jkSpS2KvXU"
       },
@@ -410,7 +410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "_v_X_7XsuWY9"
       },
@@ -428,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "id": "kZYXfp-UtWMs"
       },
@@ -450,7 +450,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "10_jVVTElNZ5"
       },
@@ -492,7 +492,7 @@
         "\n",
         "        start_time = time.time()\n",
         "        #!TotalSegmentator -i {nifti_filename_path} -o segmentations --ml --fast --preview  --radiomics \n",
-        "        result=subprocess.run(['TotalSegmentator', '-i', nifti_filename_path, '-o', 'segmentations', '--ml', '--fast', '--preview', '--radiomics'],stdout=subprocess.PIPE, stderr=subprocess.PIPE,  universal_newlines=True)\n",
+        "        result=subprocess.run(['TotalSegmentator', '-i', nifti_filename_path, '-o', 'segmentations', '--ml', '--preview', '--radiomics'],stdout=subprocess.PIPE, stderr=subprocess.PIPE,  universal_newlines=True)\n",
         "        print(result.stdout)\n",
         "        total_segmentator_time = time.time() - start_time\n",
         "\n",
@@ -538,7 +538,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "id": "cGQ_URr1pQpj"
       },
@@ -592,7 +592,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1349,7 +1349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "id": "bxuuD6yqdmzF"
       },
@@ -1377,7 +1377,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "id": "Lc7Hep0lkJWd"
       },
