--- a/Notebooks/Totalsegmentator/downloadDicomAndConvertNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/downloadDicomAndConvertNotebook.ipynb
@@ -38,44 +38,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "hT_MQVJ_NbZU"
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
-        "#Installing dcm2niix and pigz\n",
-        "!apt-get install dcm2niix pigz lz4"
+        "# %%capture\n",
+        "# #Installing dcm2niix and pigz\n",
+        "# !apt-get install dcm2niix pigz lz4"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "N2Z3udYNn7ur"
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
-        "#Installing plastimatch\n",
-        "!apt-get install plastimatch "
+        "# %%capture\n",
+        "# #Installing plastimatch\n",
+        "# !apt-get install plastimatch "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "cMi94BlAQrb5"
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
-        "#install s5cmd\n",
-        "!wget \"https://github.com/peak/s5cmd/releases/download/v2.0.0/s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
-        "!tar -xvzf \"s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
-        "!rm \"s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
-        "!mv s5cmd /usr/local/bin/s5cmd"
+        "# %%capture\n",
+        "# #install s5cmd\n",
+        "# !wget \"https://github.com/peak/s5cmd/releases/download/v2.0.0/s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
+        "# !tar -xvzf \"s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
+        "# !rm \"s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
+        "# !mv s5cmd /usr/local/bin/s5cmd"
       ]
     },
     {
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -140,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "gy6QqWR-jjdP",
         "tags": [
@@ -164,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -192,8 +192,8 @@
         }
       ],
       "source": [
-        "!wget https://raw.githubusercontent.com/vkt1414/Cloud-Resources-Workflows/main/sampleManifests/batch_1.csv\n",
-        "csvFilePath = glob.glob('*.csv')[0]\n"
+        "# !wget https://raw.githubusercontent.com/vkt1414/Cloud-Resources-Workflows/main/sampleManifests/batch_1.csv\n",
+        "# csvFilePath = glob.glob('*.csv')[0]\n"
       ]
     },
     {
@@ -207,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -233,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "jDxZvqDlR5Cc"
       },
@@ -253,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "lx_U7rRjtRYk"
       },
@@ -269,7 +269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "QFG0KcZ_QPyG"
       },
@@ -305,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "s0SPIZ5RTxDb"
       },
@@ -344,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "fGX6gofuPhjf"
       },
@@ -380,7 +380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "oKATbtgwPjX9"
       },
@@ -417,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -765,7 +765,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "tba4tK6pvja9"
       },
@@ -789,7 +789,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "wP7_k4msvl2E"
       },
@@ -810,7 +810,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -872,7 +872,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
