--- a/Notebooks/Totalsegmentator/inferenceTotalSegmentatorNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/inferenceTotalSegmentatorNotebook.ipynb
@@ -52,10 +52,10 @@
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
-        "#Installing lz4 for compression/decompression\n",
-        "#xvfb required for previewing Totalsegmentator png images\n",
-        "!apt-get install lz4 xvfb"
+        "# %%capture\n",
+        "# #Installing lz4 for compression/decompression\n",
+        "# #xvfb required for previewing Totalsegmentator png images\n",
+        "# !apt-get install lz4 xvfb"
       ]
     },
     {
@@ -66,11 +66,11 @@
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
-        "#Installing Totalsegmentator for Inference\n",
-        "#pyradiomics required for extracting radiomics features \n",
-        "#nvidia-ml-py3 for capturing gpu utilization\n",
-        "!pip install TotalSegmentator pyradiomics nvidia-ml-py3"
+        "# %%capture\n",
+        "# #Installing Totalsegmentator for Inference\n",
+        "# #pyradiomics required for extracting radiomics features \n",
+        "# #nvidia-ml-py3 for capturing gpu utilization\n",
+        "# !pip install TotalSegmentator pyradiomics nvidia-ml-py3"
       ]
     },
     {
@@ -193,7 +193,7 @@
         }
       ],
       "source": [
-        "!pip install gdown"
+        "# !pip install gdown"
       ]
     },
     {
@@ -219,8 +219,8 @@
         }
       ],
       "source": [
-        "!gdown \"https://drive.google.com/uc?id=1LsRPn_gTWUwVZwrcnSllogTaw8MW2d2M\" \n",
-        "niftiFilePath= glob.glob(\"*.lz4\")[0]"
+        "# !gdown \"https://drive.google.com/uc?id=1LsRPn_gTWUwVZwrcnSllogTaw8MW2d2M\" \n",
+        "# niftiFilePath= glob.glob(\"*.lz4\")[0]"
       ]
     },
     {
