--- a/Notebooks/Totalsegmentator/itkimage2segimageAndRadiomicsNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/itkimage2segimageAndRadiomicsNotebook.ipynb
@@ -143,7 +143,7 @@
         "import json\n",
         "import logging\n",
         "import matplotlib.pyplot as plt\n",
-        "import nibabel as nib\n",
+        "# import nibabel as nib\n",
         "import numpy as np\n",
         "import os\n",
         "from pathlib import Path\n",
@@ -819,11 +819,11 @@
       "execution_count": 24,
       "metadata": {
         "id": "w_-jEmCgKJBe",
-        "outputId": "a60d55b4-2c01-4f75-f270-481d63d55b0c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 673
-        }
+        },
+        "outputId": "a60d55b4-2c01-4f75-f270-481d63d55b0c"
       },
       "outputs": [
         {
